--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "babel-plugin-tester": "^5.0.0",
-    "babel-types": "^6.26.0",
-    "jest": "^22.3.0"
+    "babel-types": "^6.26.0"
   },
   "scripts": {
     "test": "node ./test"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0"
+    "babel-core": "^6.26.0",
+    "babel-plugin-tester": "^5.0.0",
+    "jest": "^22.3.0"
   }
 }
